package inf112.skeleton.app.game.objects;

public enum CardType {
    FORWARDONE,
    FORWARDTWO,
    FORWARDTHREE,
    BACK_UP,
    TURNLEFT,
    TURNRIGHT,
    UTURN,
    NONE
}
