@startuml

title __OBJECTS's Class Diagram__\n

  namespace inf112.skeleton.app {
    namespace game {
      namespace objects {
        class inf112.skeleton.app.game.objects.Card {
            + picked : boolean
            - priority : int
            + Card()
            + getCardType()
            + getPriority()
            + setCardType()
            + setPriority()
        }
      }
    }
  }
  

  namespace inf112.skeleton.app {
    namespace game {
      namespace objects {
        class inf112.skeleton.app.game.objects.Card.cardComparator {
            + compare()
        }
      }
    }
  }
  

  namespace inf112.skeleton.app {
    namespace game {
      namespace objects {
        enum CardType {
          BACK_UP
          FORWARDONE
          FORWARDTHREE
          FORWARDTWO
          NONE
          TURNLEFT
          TURNRIGHT
          UTURN
        }
      }
    }
  }
  

  namespace inf112.skeleton.app {
    namespace game {
      namespace objects {
        enum Direction {
          EAST
          NORTH
          SOUTH
          WEST
        }
      }
    }
  }
  

  namespace inf112.skeleton.app {
    namespace game {
      namespace objects {
        class inf112.skeleton.app.game.objects.Flag {
            - position : GridPoint2
            + Flag()
            + Flag()
            + getX()
            + getY()
        }
      }
    }
  }
  

  namespace inf112.skeleton.app {
    namespace game {
      namespace objects {
        class inf112.skeleton.app.game.objects.PlayerToken {
            + ID : int
            + damage : int
            + diedThisTurn : boolean
            + hp : int
            + name : String
            + position : GridPoint2
            + powerDown : boolean
            + spawnLoc : GridPoint2
            - flagsVisited : List<Flag>
            + died()
            + getConfig()
            + getDirection()
            + getVisitedFlags()
            + getX()
            + getY()
            + isPermanentlyDestroyed()
            + move()
            + rotate()
            + setConfig()
            + visitFlag()
            + wouldEndUp()
            - moveDir()
        }
      }
    }
  }
  

  namespace inf112.skeleton.app {
    namespace game {
      namespace objects {
        enum CHARACTER_STATES {
          NONE
          PLAYERNORMAL
          PLAYERSELFNORMAL
          PLAYERSELFWON
          PLAYERWON
        }
      }
    }
  }
  

  inf112.skeleton.app.game.objects.Card o-- inf112.skeleton.app.game.objects.CardType : cardType
  inf112.skeleton.app.game.objects.Card +-down- inf112.skeleton.app.game.objects.Card.cardComparator
  inf112.skeleton.app.game.objects.Card.cardComparator .up.|> java.util.Comparator
  inf112.skeleton.app.game.objects.PlayerToken o-- inf112.skeleton.app.game.objects.PlayerToken.CHARACTER_STATES : charState
  inf112.skeleton.app.game.objects.PlayerToken o-- inf112.skeleton.app.libgdx.PlayerConfig : config
  inf112.skeleton.app.game.objects.PlayerToken o-- inf112.skeleton.app.game.objects.Direction : playerDirection
  inf112.skeleton.app.game.objects.PlayerToken +-down- inf112.skeleton.app.game.objects.PlayerToken.CHARACTER_STATES


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
